--- a/atelier_1/atelier1/app/src/main/res/layout/activity_base.xml
+++ b/atelier_1/atelier1/app/src/main/res/layout/activity_base.xml
@@ -29,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header_base"
         app:menu="@menu/navigation_view_menu" />
 
 </android.support.v4.widget.DrawerLayout>
