--- a/atelier_1/atelier1/app/src/main/res/layout/activity_base.xml
+++ b/atelier_1/atelier1/app/src/main/res/layout/activity_base.xml
@@ -20,7 +20,7 @@
         <FrameLayout
             android:id="@+id/activity_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -29,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_base"
         app:menu="@menu/navigation_view_menu" />
 
