Updated layout for NormalActivity

--- a/atelier_2/atelier2/app/src/main/res/layout/activity_normal.xml
+++ b/atelier_2/atelier2/app/src/main/res/layout/activity_normal.xml
@@ -4,12 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NormalActivity"
-    tools:showIn="@layout/activity_normal" >
+    tools:context=".NormalActivity" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main Activity!"/>
+        android:text="Main Activity!"
+        android:id="@+id/textView2" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageId"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
 </RelativeLayout>
