--- a/atelier_1/Atelier1/app/src/main/res/layout/nav_header_base.xml
+++ b/atelier_1/Atelier1/app/src/main/res/layout/nav_header_base.xml
@@ -11,20 +11,21 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/navImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@android:drawable/sym_def_app_icon" />
 
     <TextView
+        android:id="@+id/navAppNameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/app_name"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/navEmailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/emailSupport" />
